z-index fixes

--- a/imports/ui/component/article.viewer.detail/style.less
+++ b/imports/ui/component/article.viewer.detail/style.less
@@ -4,7 +4,7 @@
 @import "/client/style/micro-bootstrap.less";
 
 .article-detail {
-	.height-inherit();
+	max-height: 100%;
 	.everest();
 	position: relative;
 	width: 100%;
