--- a/imports/ui/component/article.viewer.filter/style.less
+++ b/imports/ui/component/article.viewer.filter/style.less
@@ -5,6 +5,8 @@
 	background-color: white;
 	padding: @std-offset-3-of-4;
 	margin-bottom: @std-offset-half;
+	position: relative;
+	.everest();
 }
 
 .article-panel__filter-button {
