--- a/imports/ui/component/article.viewer.list/style.less
+++ b/imports/ui/component/article.viewer.list/style.less
@@ -9,6 +9,8 @@
 	overflow-x: hidden;
 	box-sizing: border-box;
 	max-height: 100%;
+	position: relative;
+	.everest();
 }
 .article-panel__list-scroll {
 	overflow-y: auto;
